packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/UoWAuditWorkItem__c.object-meta.xml
<CustomObject>
    <description>Stores audit data for individual work items within a UoW transaction. Child of UoWAuditTransaction__c. Contains full snapshot payload from platform event.</description>
    <label>Audit Work Item</label>
    <nameField>
        <label>Work Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>