packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/AuditTransaction__c.field-meta.xml
<CustomField>
    <fullName>AuditTransaction__c</fullName>
    <description>Master-Detail relationship to the parent transaction audit record.</description>
    <inlineHelpText>Master-Detail relationship to the parent transaction audit record.</inlineHelpText>
    <label>Audit Transaction</label>
    <referenceTo>UoWAuditTransaction__c</referenceTo>
    <relationshipName>WorkItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>