packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ContinueOnError__c.field-meta.xml
<CustomField>
    <fullName>ContinueOnError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this work item was configured to continue on error (allOrNone=false for DML).</description>
    <inlineHelpText>Whether this work item was configured to continue on error (allOrNone=false for DML).</inlineHelpText>
    <label>Continue On Error</label>
    <type>Checkbox</type>
</CustomField>