packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/DmlOperation__c.field-meta.xml
<CustomField>
    <fullName>DmlOperation__c</fullName>
    <description>DML operation type (INSERT_OP, UPSERT_OP, UPDATE_OP, DELETE_OP, UNDELETE_OP). Only populated for DML work types.</description>
    <inlineHelpText>DML operation type (INSERT_OP, UPSERT_OP, UPDATE_OP, DELETE_OP, UNDELETE_OP). Only populated for DML work types.</inlineHelpText>
    <label>DML Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSERT_OP</fullName>
                <label>Insert</label>
            </value>
            <value>
                <fullName>UPSERT_OP</fullName>
                <label>Upsert</label>
            </value>
            <value>
                <fullName>UPDATE_OP</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>DELETE_OP</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>UNDELETE_OP</fullName>
                <label>Undelete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>