packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <description>Formula field calculating operation duration in milliseconds.</description>
    <formula>IF(
    AND(NOT(ISBLANK(EndTime__c)), NOT(ISBLANK(StartTime__c))),
    (EndTime__c - StartTime__c) * 24 * 60 * 60 * 1000,
    NULL
)</formula>
    <inlineHelpText>Formula field calculating operation duration in milliseconds.</inlineHelpText>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>