packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL for callout work items. Only populated for CALLOUT work type.</description>
    <inlineHelpText>Endpoint URL for callout work items. Only populated for CALLOUT work type.</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>