packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Timestamp when execution completed for this work item.</description>
    <inlineHelpText>Timestamp when execution completed for this work item.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>