packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <description>Number of errors in this work item.</description>
    <inlineHelpText>Number of errors in this work item.</inlineHelpText>
    <label>Error Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>