packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <description>JSON array of detailed error information.</description>
    <inlineHelpText>JSON array of detailed error information.</inlineHelpText>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>