packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message if operation failed (truncated to fit).</description>
    <inlineHelpText>Error message if operation failed (truncated to fit).</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>