packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ExecutionPhase__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPhase__c</fullName>
    <description>Execution phase for non-DML work items (EVENT, EMAIL, NOTIFICATION, FLOW). Values: PRE_DML, POST_DML, ON_SUCCESS, ON_FAILURE, ON_FINALIZATION.</description>
    <inlineHelpText>Execution phase for non-DML work items (EVENT, EMAIL, NOTIFICATION, FLOW). Values: PRE_DML, POST_DML, ON_SUCCESS, ON_FAILURE, ON_FINALIZATION.</inlineHelpText>
    <label>Execution Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>