packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Duration of execution in milliseconds.</description>
    <inlineHelpText>Duration of execution in milliseconds.</inlineHelpText>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>