packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <description>Flow API name for flow work items. Only populated for FLOW work type.</description>
    <inlineHelpText>Flow API name for flow work items. Only populated for FLOW work type.</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>