packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/HasErrors__c.field-meta.xml
<CustomField>
    <fullName>HasErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this work item has errors.</description>
    <inlineHelpText>Whether this work item has errors.</inlineHelpText>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>