packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>HTTP method for callout work items (GET, POST, PUT, DELETE, PATCH). Only populated for CALLOUT work type.</description>
    <inlineHelpText>HTTP method for callout work items (GET, POST, PUT, DELETE, PATCH). Only populated for CALLOUT work type.</inlineHelpText>
    <label>HTTP Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>