packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/IsExecuted__c.field-meta.xml
<CustomField>
    <fullName>IsExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this work item was actually executed.</description>
    <inlineHelpText>Whether this work item was actually executed.</inlineHelpText>
    <label>Is Executed</label>
    <type>Checkbox</type>
</CustomField>