packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsAggregateQueriesAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueriesAtEnd__c</fullName>
    <description>Aggregate queries used after this operation completed.</description>
    <inlineHelpText>Aggregate queries used after this operation completed.</inlineHelpText>
    <label>Aggregate Queries At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>