packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsAggregateQueriesAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueriesAtStart__c</fullName>
    <description>Aggregate queries used before this operation started.</description>
    <inlineHelpText>Aggregate queries used before this operation started.</inlineHelpText>
    <label>Aggregate Queries At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>