packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsAggregateQueriesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsAggregateQueriesConsumed__c</fullName>
    <description>Formula: Aggregate queries consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsAggregateQueriesAtEnd__c)), NOT(ISBLANK(LimitsAggregateQueriesAtStart__c))),
    LimitsAggregateQueriesAtEnd__c - LimitsAggregateQueriesAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Aggregate queries consumed by this operation.</inlineHelpText>
    <label>Aggregate Queries Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>