packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorFetchCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCalls__c</fullName>
    <description>Apex Cursor Fetch Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsApexCursorFetchCallsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c) ||
  AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsApexCursorFetchCallsConsumed__c / AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorFetchCalls.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsApexCursorFetchCallsConsumed__c / AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorFetchCalls.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsApexCursorFetchCallsConsumed__c / AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsApexCursorFetchCallsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsApexCursorFetchCallsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Apex Cursor Fetch Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Apex Cursor Fetch Calls</label>
    <type>Text</type>
</CustomField>