packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorFetchCallsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsAtEnd__c</fullName>
    <description>Apex cursor fetch calls used after this operation completed.</description>
    <inlineHelpText>Apex cursor fetch calls used after this operation completed.</inlineHelpText>
    <label>Apex Cursor Fetch Calls At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>