packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorFetchCallsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsAtStart__c</fullName>
    <description>Apex cursor fetch calls used before this operation started.</description>
    <inlineHelpText>Apex cursor fetch calls used before this operation started.</inlineHelpText>
    <label>Apex Cursor Fetch Calls At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>