packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorFetchCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorFetchCallsConsumed__c</fullName>
    <description>Formula: Apex cursor fetch calls consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsApexCursorFetchCallsAtEnd__c)), NOT(ISBLANK(LimitsApexCursorFetchCallsAtStart__c))),
    LimitsApexCursorFetchCallsAtEnd__c - LimitsApexCursorFetchCallsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Apex cursor fetch calls consumed by this operation.</inlineHelpText>
    <label>Apex Cursor Fetch Calls Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>