packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRows__c</fullName>
    <description>Apex Cursor Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsApexCursorRowsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsApexCursorRowsConsumed__c) ||
  AuditTransaction__r.LimitsApexCursorRowsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsApexCursorRowsConsumed__c / AuditTransaction__r.LimitsApexCursorRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorRows.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsApexCursorRowsConsumed__c / AuditTransaction__r.LimitsApexCursorRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.ApexCursorRows.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsApexCursorRowsConsumed__c / AuditTransaction__r.LimitsApexCursorRowsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsApexCursorRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsApexCursorRowsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Apex Cursor Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Apex Cursor Rows</label>
    <type>Text</type>
</CustomField>