packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorRowsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRowsAtEnd__c</fullName>
    <description>Apex cursor rows used after this operation completed.</description>
    <inlineHelpText>Apex cursor rows used after this operation completed.</inlineHelpText>
    <label>Apex Cursor Rows At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>