packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorRowsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRowsAtStart__c</fullName>
    <description>Apex cursor rows used before this operation started.</description>
    <inlineHelpText>Apex cursor rows used before this operation started.</inlineHelpText>
    <label>Apex Cursor Rows At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>