packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsApexCursorRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsApexCursorRowsConsumed__c</fullName>
    <description>Formula: Apex cursor rows consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsApexCursorRowsAtEnd__c)), NOT(ISBLANK(LimitsApexCursorRowsAtStart__c))),
    LimitsApexCursorRowsAtEnd__c - LimitsApexCursorRowsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Apex cursor rows consumed by this operation.</inlineHelpText>
    <label>Apex Cursor Rows Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>