packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCallouts__c.field-meta.xml
<CustomField>
    <fullName>LimitsCallouts__c</fullName>
    <description>Callouts usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsCalloutsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsCalloutsConsumed__c) ||
  AuditTransaction__r.LimitsCalloutsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsCalloutsConsumed__c / AuditTransaction__r.LimitsCalloutsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.Callouts.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsCalloutsConsumed__c / AuditTransaction__r.LimitsCalloutsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.Callouts.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsCalloutsConsumed__c / AuditTransaction__r.LimitsCalloutsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsCalloutsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsCalloutsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Callouts usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Callouts</label>
    <type>Text</type>
</CustomField>