packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCalloutsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsAtEnd__c</fullName>
    <description>Callouts used after this operation completed.</description>
    <inlineHelpText>Callouts used after this operation completed.</inlineHelpText>
    <label>Callouts At End</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>