packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCalloutsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsAtStart__c</fullName>
    <description>Callouts used before this operation started.</description>
    <inlineHelpText>Callouts used before this operation started.</inlineHelpText>
    <label>Callouts At Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>