packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCalloutsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsCalloutsConsumed__c</fullName>
    <description>Formula: Callouts consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsCalloutsAtEnd__c)), NOT(ISBLANK(LimitsCalloutsAtStart__c))),
    LimitsCalloutsAtEnd__c - LimitsCalloutsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Callouts consumed by this operation.</inlineHelpText>
    <label>Callouts Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>