packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCpuTime__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTime__c</fullName>
    <description>CPU Time usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsCpuTimeConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsCpuTimeConsumed__c) ||
  AuditTransaction__r.LimitsCpuTimeConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsCpuTimeConsumed__c / AuditTransaction__r.LimitsCpuTimeConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.CpuTime.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsCpuTimeConsumed__c / AuditTransaction__r.LimitsCpuTimeConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.CpuTime.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsCpuTimeConsumed__c / AuditTransaction__r.LimitsCpuTimeConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsCpuTimeConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsCpuTimeConsumed__c) &amp; &quot; ms)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CPU Time usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>CPU Time</label>
    <type>Text</type>
</CustomField>