packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCpuTimeAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTimeAtEnd__c</fullName>
    <description>CPU time used after this operation completed (ms).</description>
    <inlineHelpText>CPU time used after this operation completed (ms).</inlineHelpText>
    <label>CPU Time At End (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>