packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCpuTimeAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTimeAtStart__c</fullName>
    <description>CPU time used before this operation started (ms).</description>
    <inlineHelpText>CPU time used before this operation started (ms).</inlineHelpText>
    <label>CPU Time At Start (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>