packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsCpuTimeConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsCpuTimeConsumed__c</fullName>
    <description>Formula: CPU time consumed by this operation (ms).</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsCpuTimeAtEnd__c)), NOT(ISBLANK(LimitsCpuTimeAtStart__c))),
    LimitsCpuTimeAtEnd__c - LimitsCpuTimeAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: CPU time consumed by this operation (ms).</inlineHelpText>
    <label>CPU Time Consumed (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>