packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlRowsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRowsAtEnd__c</fullName>
    <description>DML rows used after this operation completed.</description>
    <inlineHelpText>DML rows used after this operation completed.</inlineHelpText>
    <label>DML Rows At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>