packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlRowsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRowsAtStart__c</fullName>
    <description>DML rows used before this operation started.</description>
    <inlineHelpText>DML rows used before this operation started.</inlineHelpText>
    <label>DML Rows At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>