packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlRowsConsumed__c</fullName>
    <description>Formula: DML rows consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsDmlRowsAtEnd__c)), NOT(ISBLANK(LimitsDmlRowsAtStart__c))),
    LimitsDmlRowsAtEnd__c - LimitsDmlRowsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: DML rows consumed by this operation.</inlineHelpText>
    <label>DML Rows Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>