packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlStatements__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatements__c</fullName>
    <description>DML Statements usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsDmlStatementsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsDmlStatementsConsumed__c) ||
  AuditTransaction__r.LimitsDmlStatementsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsDmlStatementsConsumed__c / AuditTransaction__r.LimitsDmlStatementsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlStatements.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsDmlStatementsConsumed__c / AuditTransaction__r.LimitsDmlStatementsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.DmlStatements.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsDmlStatementsConsumed__c / AuditTransaction__r.LimitsDmlStatementsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsDmlStatementsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsDmlStatementsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DML Statements usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>DML Statements</label>
    <type>Text</type>
</CustomField>