packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlStatementsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatementsAtEnd__c</fullName>
    <description>DML statements used after this operation completed.</description>
    <inlineHelpText>DML statements used after this operation completed.</inlineHelpText>
    <label>DML Statements At End</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>