packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlStatementsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatementsAtStart__c</fullName>
    <description>DML statements used before this operation started.</description>
    <inlineHelpText>DML statements used before this operation started.</inlineHelpText>
    <label>DML Statements At Start</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>