packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsDmlStatementsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsDmlStatementsConsumed__c</fullName>
    <description>Formula: DML statements consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsDmlStatementsAtEnd__c)), NOT(ISBLANK(LimitsDmlStatementsAtStart__c))),
    LimitsDmlStatementsAtEnd__c - LimitsDmlStatementsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: DML statements consumed by this operation.</inlineHelpText>
    <label>DML Statements Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>