packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsEmailInvocationsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsAtEnd__c</fullName>
    <description>Email invocations used after this operation completed.</description>
    <inlineHelpText>Email invocations used after this operation completed.</inlineHelpText>
    <label>Email Invocations At End</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>