packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsEmailInvocationsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsAtStart__c</fullName>
    <description>Email invocations used before this operation started.</description>
    <inlineHelpText>Email invocations used before this operation started.</inlineHelpText>
    <label>Email Invocations At Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>