packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsEmailInvocationsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsEmailInvocationsConsumed__c</fullName>
    <description>Formula: Email invocations consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsEmailInvocationsAtEnd__c)), NOT(ISBLANK(LimitsEmailInvocationsAtStart__c))),
    LimitsEmailInvocationsAtEnd__c - LimitsEmailInvocationsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Email invocations consumed by this operation.</inlineHelpText>
    <label>Email Invocations Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>